[package]
name = "rust-first"
version = "0.1.0"
edition = "2021"
authors = [ "subaru-hello <>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.67"
serde = "1.0.188"
worker = { version="0.4.1", features=['http', 'd1'] }
worker-macros = { version="0.4.1", features=['http'] }
console_error_panic_hook = { version = "0.1.1" }
http = "1.1"
